kubernetes/apps/services/unifi/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-controller
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "unifi"
    hajimari.io/group: "network"
    hajimari.io/icon: "wifi"
spec:
  hostnames:
    - "unifi.${SECRET_DOMAIN_2}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: unifi
          port: 8443
