kubernetes/apps/services/unifi/app/ingress-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: unifi-inform
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`unifi-inform.${SECRET_DOMAIN_2}`)
      services:
        - name: unifi
          port: 8080
  tls:
    secretName: "unifi-inform.${SECRET_DOMAIN_2//./-}-prod-tls"
