kubernetes/apps/services/unifi/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv6.${SECRET_DOMAIN_2}"
    external-dns.alpha.kubernetes.io/hostname: unifi.${SECRET_DOMAIN_2}
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/appName: "unifi"
    hajimari.io/group: "network"
    hajimari.io/icon: "wifi"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-cloudflare-secure-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "unifi.${SECRET_DOMAIN_2}"
      secretName: "unifi.${SECRET_DOMAIN_2//./-}-prod-tls"
  rules:
    - host: unifi.${SECRET_DOMAIN_2}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443
